--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "webpack-merge": "^0.3.2"
   },
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "build": "webpack"
   },
   "dependencies": {
     "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react-dom": "^0.14.3",
+    "reqwest": "^2.0.5"
   }
 }
